--- a/운형.html
+++ b/운형.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     </head>
     <body>
-        <h1><a href="main.html">ASPHALT</a></h1>
+        <h1><a href="index.html">ASPHALT</a></h1>
         <ol>
             <li><a href="운형.html">이운형</a></li>
             <li><a href="세형.html">이세형</a></li>
