--- a/세형.html
+++ b/세형.html
@@ -30,14 +30,14 @@
         </style>
     </head> 
     <body style="margin-top: 0;">
-        <h1><a href="index.html">ASPHALT</a></h1>
+        <h1><a href="index.html" style="text-decoration: none;">ASPHALT</a></h1>
         <div id="grid">
                 <ol>
                     <li><a href="운형.html">이운형</a></li>
                     <li><a href="세형.html">이세형</a></li>
                     <li><a href="정욱.html">이정욱</a></li>
                 </ol>
-            <div id="article">            
+            <div id="article" style="padding-left: 5px;">            
                 <h2>이세형 개인 사진전</h2>
                 <img src="사진\세형\KakaoTalk_20220320_015626958.jpg" width="450"><br>
                 <img src="사진\세형\KakaoTalk_20220304_101655572.jpg" width="450"><br>
