--- a/세형.html
+++ b/세형.html
@@ -15,8 +15,8 @@
             </ol>
             <div id="article" style="padding-left: 5px">
                 <h2 class="subTitle">이세형 개인 사진전</h2>
-                <img src="사진\세형\라인프랜즈_토끼.jpg" width="300" /><br /><br />
-                <img src="사진\세형\라인프랜즈_곰.jpg" width="300" /><br />
+                <img id="first-image" src="사진\세형\라인프랜즈_토끼.jpg" width="300" /><br /><br />
+                <img id="second-image" src="사진\세형\라인프랜즈_곰.jpg" width="300" /><br />
             </div>
         </div>
 
@@ -38,6 +38,16 @@
                 alert("존잘 이세형");
             }
             lshButton.addEventListener("click", lshNameClick);
+
+            const firstImage = document.querySelector("#first-image");
+            console.log(firstImage);
+
+            //첫번째 사진 더블클릭!!
+            function onDoubleClickImage() {
+                firstImage.src = "사진/cording.jpg";
+                subTitle.textContent = "재성 원하는게 이거냐 ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ";
+            }
+            firstImage.addEventListener("dblclick", onDoubleClickImage);
         </script>
     </body>
 </html>
