--- a/세형.html
+++ b/세형.html
@@ -43,11 +43,11 @@
             console.log(firstImage);
 
             //첫번째 사진 더블클릭!!
-            function onDoubleClickImage() {
+            function onClickImage() {
                 firstImage.src = "사진/cording.jpg";
                 subTitle.textContent = "재성 원하는게 이거냐 ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ";
             }
-            firstImage.addEventListener("dblclick", onDoubleClickImage);
+            firstImage.addEventListener("click", onClickImage);
         </script>
     </body>
 </html>
